--- a/app/views/admins/dashboard/index.html.erb
+++ b/app/views/admins/dashboard/index.html.erb
@@ -1,3 +1,14 @@
-<h1>
-  estas en el administrador
-</h1>
+<% if current_admin %>
+  <script>
+    localStorage.setItem("current_user", JSON.stringify(<%= current_admin.to_json.html_safe %>) );
+    localStorage.setItem("current_rol", "admin" );
+  </script>
+
+  <%= button_to "Log out", destroy_admin_session_path, method: :delete, data: { turbo: false } %>
+<% end %>
+
+
+
+<%= content_tag(:div, "", id:"app", data: {
+  controller: "admin"
+})%>
