configure mailer uploader && notification hooks

--- a/app/views/student_mailer/welcome_email.html.erb
+++ b/app/views/student_mailer/welcome_email.html.erb
@@ -217,7 +217,7 @@
 																							<td class="h4 pb20" style="color:#ffffff; font-family:'Muli', Arial,sans-serif; font-size:20px; line-height:28px; text-align:left; padding-bottom:20px;"><multiline>Recuerda</multiline></td>
 																						</tr>
 																						<tr>
-																							<td class="text pb20" style="color:#ffffff; font-family:Arial,sans-serif; font-size:14px; line-height:26px; text-align:left; padding-bottom:20px;"><multiline>Puedes ingresar con el número de tu dni o código institucional y tu contraseña es el número de tu dni.</multiline></td>
+																							<td class="text pb20" style="color:#ffffff; font-family:Arial,sans-serif; font-size:14px; line-height:26px; text-align:left; padding-bottom:20px;"><multiline>Puedes ingresar con el número de tu documento de identidad o código institucional y tu contraseña es el número de tu documento.</multiline></td>
 																						</tr>
 																						<!-- Button -->
 																						<tr>
