--- a/app/views/professors/dashboard/index.html.erb
+++ b/app/views/professors/dashboard/index.html.erb
@@ -1,3 +1,10 @@
-<h1>
-  estas en el profesor
-</h1>
+<% if current_professor %>
+  <script>
+    localStorage.setItem("current_user", JSON.stringify(<%= current_professor.to_json.html_safe %>) );
+    localStorage.setItem("current_rol", "professor" );
+  </script>
+<% end %>
+
+<%= content_tag(:div, "", id:"app", data: {
+  controller: "professor"
+})%>
