--- a/app/javascript/scss/_custom.scss
+++ b/app/javascript/scss/_custom.scss
@@ -230,3 +230,7 @@
 .card-box-shadow {
   box-shadow: 0 10px 16px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%) !important;
 }
+
+.bg-test {
+  background-color: #03f3bb !important;
+}
